<resources>
    <string name="app_name">RoamCatX</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_rename">Rename</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_copy">Copy</string>
    <string name="btn_paste">Paste</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_more">More</string>

    <string name="grant_storage_permission">Please enable application storage permissions</string>
    <string name="click_again_exit">Click again to exit the App</string>

    <string name="tab_home">Home</string>
    <string name="tab_find">Find</string>
    <string name="tab_hot_action">HotAction</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About Us</string>
    <string name="menu_sort">Sort</string>
    <string name="drawer_title">@string/app_name</string>
    <string name="drawer_subtitle">Life is like a river, running forward continuously. The two sides of the river have four different views. On the one hand, we should overcome the resistance and move forward; on the other hand, we should not forget that all kinds of scenery on both sides of the Straits are worth our appreciation and taste.</string>
    <string name="language">Language</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">English</string>
    <string name="copy_success">Copy success</string>
    <string name="current_version">Version: %s%s</string>
    <string name="check_update">Check update</string>
    <string name="check_update_failed">Check update failed</string>
    <string name="has_be_latest_version">This is the latest version</string>
    <string name="find_new_version">Find new version %s</string>
    <string name="clipboard_auto_jump">View clipboard when updated</string>
    <string name="set_language_s_tips">Set the language successfully and take effect after restarting the APP</string>
    <string name="share_friends">Share with friends</string>
    <string name="view_source">View source code</string>
    <string name="debug_apk_tips">You are using the development debug version, click here to download the official release of the experience</string>
    <!--find-->
    <string name="disable_feature">Disable</string>
    <string name="enable_feature">Enable</string>
    <string name="is_enabled">(enabled)</string>
    <string name="is_not_enabled">(not enabled)</string>
    <string name="reset_confirm">Reset confirmation</string>
    <string name="reset_confirm_tips">After reset, the homepage will only show the functions enabled by default. Are you sure you want to return to the default Settings?</string>
    <string name="disable_all_feature">Disable all</string>
    <string name="enable_all_feature">Enable all</string>
    <string name="reset_default">Reset</string>
    <!--hot action-->
    <string name="ha_action">Action</string>
    <string name="ha_info">Info</string>
    <string name="ha_system_info">System info</string>
    <string name="ha_match_url">Match url</string>
    <string name="ha_sandbox">Sand box</string>
    <string name="ha_sys_setting">System settings</string>
    <string name="ha_to_hash">Generate hash</string>
    <string name="ha_to_pinyin">Show pinyin</string>

    <!--plugins-->
    <string name="item_skystar">Sky</string>
    <string name="item_reader">Reader</string>
    <string name="item_poem">Poem</string>
    <string name="item_webbrowser">WebBrowser</string>
    <string name="item_apps">Applications</string>
    <string name="item_note">Note</string>
    <string name="item_private_note">PrivateNotes</string>
    <string name="item_file_manager">FileManager</string>
    <string name="item_music">MusicPlayer</string>
    <string name="item_gallery">Gallery</string>
    <string name="item_videos">Videos</string>
    <string name="item_text_viewer">TextViewer</string>
    <string name="item_image_viewer">ImageViewer</string>
    <string name="item_file_clear">FileCleaner</string>
    <string name="item_sport_list">SportRecord</string>
    <string name="item_calendar">Calendar</string>
    <string name="item_calculator">Calculator</string>
    <string name="item_clipboard">Clipboard</string>
    <string name="item_nerve_rabbit">NerveRabbit</string>
    <string name="item_sudoku">Sudoku</string>
    <string name="item_drawboard">DrawingBoard</string>
    <string name="item_scan">ScanCode</string>
    <string name="item_video_player">VideoPlayer</string>
    <string name="item_file_selector">FileSelector</string>
    <string name="item_music_list">MusicStore</string>
    <string name="item_msg_skystar">Looking for the sun, moon and stars in the sky</string>
    <string name="item_msg_reader">You have a pair of love reading eyes</string>
    <string name="item_msg_poem">Discover the beauty of ancient and modern poetry</string>
    <string name="item_msg_webbrowser">The world is all around you</string>
    <string name="item_msg_apps">What are the applications in mobile phones</string>
    <string name="item_msg_note">Jot down the good things in life</string>
    <string name="item_msg_private_note">Keep track of your little secrets</string>
    <string name="item_msg_file_manager">It is time to manage the files in your phone</string>
    <string name="item_msg_music">Listen to a clip of music</string>
    <string name="item_msg_gallery">What new pictures do you see on your phone</string>
    <string name="item_msg_videos">After work, we will take a break</string>
    <string name="item_msg_text_viewer">What is in the file</string>
    <string name="item_msg_image_viewer">Beautiful photos click to see</string>
    <string name="item_msg_file_clear">Clean up the files you do not need</string>
    <string name="item_msg_sport_list">Did you work out today</string>
    <string name="item_msg_calendar">What holiday is today</string>
    <string name="item_msg_calculator">This is very scientific</string>
    <string name="item_msg_clipboard">What is in the clipboard</string>
    <string name="item_msg_nerve_rabbit">Do not run away, nerve_rabbit</string>
    <string name="item_msg_sudoku">Do you like Numbers</string>
    <string name="item_msg_drawboard">Draw beautiful lines</string>
    <string name="item_msg_scan">Scan recognition dot code</string>
    <string name="item_msg_video_player">Let us play a bit of video</string>
    <string name="item_msg_file_selector">Select a file</string>
    <string name="item_msg_music_list">Find great music on your phone</string>
</resources>
