<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="RelativeOverlap,ContentDescription">

    <include layout="@layout/content_toolbar" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/color_333"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_666"
        android:textSize="14sp"
        tools:text="@string/current_version" />

    <TextView
        android:id="@+id/checkUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackground"
        android:padding="5dp"
        android:text="@string/check_update"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />
</LinearLayout>
